--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".activities.SigninPasswordActivity">
 
     <android.support.v7.widget.Toolbar
@@ -16,38 +17,40 @@
     </android.support.v7.widget.Toolbar>
 
     <EditText
-        android:id="@+id/editTextPass"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_name_edittext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:hint="Enter your password"
-        android:gravity="center"
-        android:padding="17dp"
-        android:textSize="18sp"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginTop="151dp"
+        android:layout_centerVertical="true"
         android:ems="10"
+        android:gravity="center"
+        android:hint="Enter your password"
         android:inputType="textPassword"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true" />
+        android:padding="17dp"
+        android:textSize="18sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signin_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:onClick="Login"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape_signin"
+        android:onClick="Login"
+        android:text="Sign In"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/icon_password" />
 
 
 </RelativeLayout>
