--- a/app/src/main/res/layout/activity_signup_password.xml
+++ b/app/src/main/res/layout/activity_signup_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".activities.SignupPasswordActivity">
-
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarPassword"
@@ -17,48 +17,50 @@
     </android.support.v7.widget.Toolbar>
 
     <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_password_edittext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:hint="Create a password"
+        android:layout_centerVertical="true"
+        android:ems="10"
         android:gravity="center"
+        android:hint="Create a password"
+        android:inputType="textPassword"
         android:padding="17dp"
         android:textSize="18sp"
-        android:layout_below="@+id/toolbarPassword"
-        android:layout_marginTop="151dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" />
-
-    <Button
-        android:id="@+id/buttonPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:onClick="goToNameActivity"
-        android:textColor="#FFFFFF"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true" />
 
+    <Button
+        android:id="@+id/signup_password_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape_signin"
+        android:onClick="goToNameActivity"
+        android:text="Sign Up Next"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
+
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Must be 6 characters or more"
-        android:textSize="15sp"
+        android:layout_below="@+id/signup_password_edittext"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp"
-        android:layout_below="@+id/editTextPassword"
-        android:layout_centerHorizontal="true" />
+        android:text="Must be 8 characters or more"
+        android:textSize="15sp" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/icon_password" />
 
 
 </RelativeLayout>
