--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient android:angle="135" android:centerColor="#4CAF50" android:endColor="#4CAF50"
-        android:startColor="#4CAF50" android:type="linear" />
+    <gradient android:angle="135" android:centerColor="#564D65" android:endColor="#564D65"
+        android:startColor="#564D65" android:type="linear" />
 </shape>
