--- a/app/src/main/res/layout/activity_account_main.xml
+++ b/app/src/main/res/layout/activity_account_main.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="75dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_shape_signin"
         android:onClick="sign_in"
         android:text="SIGN IN"
         android:textColor="@android:color/background_light"
@@ -30,7 +30,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="14dp"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/button_shape_signup"
         android:onClick="sign_up"
         android:text="SIGN UP"
         android:textColor="@android:color/background_light"
@@ -38,7 +38,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="240dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:srcCompat="@drawable/icon_marker"
@@ -49,11 +49,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="212dp"
         android:text="PEOPLE TRACKER"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
 
 </RelativeLayout>
