--- a/app/src/main/res/layout/activity_live_map.xml
+++ b/app/src/main/res/layout/activity_live_map.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.LiveMapActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar22"
+        android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,15 +15,11 @@
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
 
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar22"
-        />
-
-
+        android:layout_below="@+id/toolbar" />
 
 </RelativeLayout>
