--- a/app/src/main/res/layout/activity_signup_name.xml
+++ b/app/src/main/res/layout/activity_signup_name.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".activities.SignupNameActivity">
-
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,80 +16,65 @@
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
 
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:src="@drawable/icon_profile"
-        app:civ_border_width="2dp"
-
         app:civ_border_color="#FF000000"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_marginEnd="76dp"
-        android:layout_marginTop="25dp"
-        android:layout_alignRight="@+id/textView"
-        android:layout_marginRight="76dp" />
+        app:civ_border_overlay="true"
+        app:civ_border_width="5dp" />
 
     <EditText
-        android:id="@+id/editTextPass"
-        android:layout_width="wrap_content"
+        android:id="@+id/signup_name_edittext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your name"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
         android:gravity="center"
+        android:hint="Enter your name"
+        android:inputType="textEmailAddress"
         android:padding="17dp"
         android:textSize="18sp"
-        android:layout_marginTop="27dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentLeft="true" />
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signup_name_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:onClick="generateCode"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape_signin"
+        android:onClick="generateCode"
+        android:text="Sign Up Next"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is how you'll appear on your map"
-        android:textSize="16sp"
+        android:layout_below="@+id/signup_name_edittext"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="7dp"
-        android:layout_below="@+id/editTextPass"
-        android:layout_centerHorizontal="true" />
+        android:text="This is how you'll appear on your map"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:onClick="openGallery"
+        android:id="@+id/addPhotoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/profile_image"
-        android:layout_below="@+id/profile_image"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="8dp"
-        android:text="Add photo"
-        android:layout_alignRight="@+id/profile_image"
-        android:layout_marginRight="15dp" />
+        android:layout_above="@+id/signup_name_edittext"
+        android:layout_centerHorizontal="true"
+        android:onClick="openGallery"
+        android:text="Add photo" />
 
 
 
