--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -10,7 +10,6 @@
     card_view:contentPadding="4dp"
     android:foreground="?selectableItemBackground">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,37 +24,31 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="0dp"
+                android:layout_width="5dp"
                 android:id="@+id/item_imageprofile"
                 android:layout_height="50dp"
-                android:layout_weight="2"
-                android:src="@drawable/icon_profile"
-                />
+                android:layout_weight="1.8"
+                android:src="@drawable/icon_profile" />
 
             <TextView
                 android:id="@+id/item_title"
                 android:layout_width="0dp"
-                android:layout_weight="7"
+                android:layout_weight="6.5"
                 android:layout_height="wrap_content"
-                android:text="Dubai"
+                android:text="Username"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:textSize="22sp" />
 
             <ImageView
-                android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_width="5dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
                 android:id="@+id/item_image"
-                android:src="@drawable/icon_location_off"
-
-
-                />
-
+                android:src="@drawable/icon_location_off" />
 
         </LinearLayout>
 
     </LinearLayout>
-
 
 </android.support.v7.widget.CardView>
