--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -7,15 +7,6 @@
     android:layout_margin="14dp"
     tools:context=".activities.FollowActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="?attr/colorPrimary">
-    </android.support.v7.widget.Toolbar>
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +16,8 @@
         android:text="Enter the invitation code"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentLeft="true" />
 
     <com.goodiebag.pinview.Pinview
         android:id="@+id/follow_code_pinview"
@@ -36,9 +28,10 @@
         app:cursorVisible="true"
         app:forceKeyboard="true"
         app:inputType="number"
-        app:pinHeight="40dp"
+        app:pinHeight="35dp"
         app:pinLength="6"
-        app:pinWidth="40dp"></com.goodiebag.pinview.Pinview>
+        app:pinWidth="35dp"
+        android:layout_alignParentLeft="true"/>
 
     <TextView
         android:layout_above="@id/follow_user"
@@ -74,6 +67,7 @@
         android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/icon_invite" />
+        app:srcCompat="@drawable/icon_invite"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
