--- a/app/src/main/res/layout/activity_signup_invite_code.xml
+++ b/app/src/main/res/layout/activity_signup_invite_code.xml
@@ -15,7 +15,8 @@
         android:layout_below="@+id/code_textview"
         android:gravity="center_horizontal"
         android:text="Share this invite code to let other users follow you."
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/code_textview"
@@ -35,7 +36,8 @@
         android:layout_alignParentStart="true"
         android:gravity="center"
         android:text="Send it in a message."
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/share_code_button"
@@ -50,10 +52,11 @@
         android:text="Send Code"
         android:textAllCaps="false"
         android:textColor="#FFFF"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_alignParentLeft="true" />
 
-    <Button
-        android:id="@+id/registerButton"
+    <TextView
+        android:id="@+id/registerTextView"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,7 +74,8 @@
         android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/icon_invite" />
+        app:srcCompat="@drawable/icon_invite"
+        android:layout_alignParentLeft="true" />
 
 
 </RelativeLayout>
