--- a/app/src/main/res/layout/activity_live_map.xml
+++ b/app/src/main/res/layout/activity_live_map.xml
@@ -22,8 +22,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar22"
-        />
+        android:layout_below="@+id/toolbar22" />
 
 
 
