--- a/app/src/main/res/layout/activity_invite_code.xml
+++ b/app/src/main/res/layout/activity_invite_code.xml
@@ -5,23 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:orientation="vertical"
     tools:context="com.mytracker.gpstracker.familytracker.InviteCodeActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="?attr/colorPrimary">
-    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4"
         android:gravity="center_horizontal"
         android:text="Share this invite code with the people you want in your circle"
         android:textSize="18sp" />
@@ -30,51 +23,49 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="34sp"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:textColor="@color/colorPrimary"
         android:fontFamily="monospace"
-        android:layout_marginTop="42dp"
-        android:text="XXXXXX" />
+        android:text="XXXXXX"
+        android:textColor="@color/colorPrimary"
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_above="@+id/button3"
+        android:layout_alignParentStart="true"
         android:gravity="center"
-        android:layout_marginTop="20dp"
         android:text="Share your code out loud or send it in a message"
-        />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="120dp"
-        android:background="@drawable/button_shape"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:textSize="16sp"
-        android:textAllCaps="false"
-        android:text="Send Code"
+        android:layout_above="@+id/textView6"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:background="@drawable/button_shape"
         android:onClick="sendCode"
-        android:textColor="#FFFF"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
 
-        />
+        android:text="Send Code"
+        android:textAllCaps="false"
+        android:textColor="#FFFF"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:onClick="Register"
-        android:textSize="20sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:text="    Done"
         android:gravity="center_horizontal"
-        />
+        android:onClick="Register"
+        android:text="Done"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
