--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-
-    tools:context="com.mytracker.gpstracker.familytracker.RegisterEmailActivity">
+    android:layout_margin="16dp"
+    tools:context=".RegisterEmailActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -21,36 +20,34 @@
 
     <EditText
         android:id="@+id/editTextPass"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:hint="Enter your email address"
-        android:gravity="center"
-        android:padding="17dp"
-        android:textSize="18sp"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginTop="151dp"
+        android:layout_centerVertical="true"
         android:ems="10"
+        android:gravity="center"
+        android:hint="Enter your email address"
         android:inputType="textEmailAddress"
-        android:layout_alignParentEnd="true" />
+        android:padding="17dp"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Next"
-        android:onClick="checkIfEmailPresent"
-        android:background="@drawable/button_shape"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_shape"
+        android:onClick="checkIfEmailPresent"
+        android:text="Next"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button"
         android:layout_alignParentStart="true"
