--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    tools:context=".RegisterEmailActivity">
+    tools:context=".activities.signup_activities.RegisterEmailActivity">
 
 
     <android.support.v7.widget.Toolbar
