--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_margin="16dp"
     tools:context=".MainActivity">
 
-
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
@@ -16,38 +15,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_shape"
-        android:onClick="LoginUser"
+        android:onClick="signin_click"
         android:padding="10dp"
-        android:text="ALREADY HAVE AN ACCOUNT?"
+        android:text="@string/action_sign_in_short"
         android:textColor="@android:color/background_light"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/button_shape"
-        android:onClick="getStarted_click"
+        android:onClick="signup_click"
         android:padding="10dp"
-        android:text="NEED NEW ACCOUNT?"
+        android:text="@string/action_sign_up_short"
         android:textColor="@android:color/background_light"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="58dp"
-        app:srcCompat="@drawable/location"
-        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" />
-
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/ic_main"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
