--- a/app/src/main/res/layout/app_bar_my_navigation_tutorial.xml
+++ b/app/src/main/res/layout/app_bar_my_navigation_tutorial.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyNavigationTutorial">
+    tools:context=".activities.maps_activities.MyNavigationTutorial">
 
     <include layout="@layout/content_my_navigation_tutorial" />
 
