--- a/app/src/main/res/menu/activity_my_navigation_tutorial_drawer.xml
+++ b/app/src/main/res/menu/activity_my_navigation_tutorial_drawer.xml
@@ -1,43 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <group android:checkableBehavior="single">
-
         <item
             android:id="@+id/joinCircle"
-            android:title="Join a Circle" />
-
+            android:icon="@drawable/ic_follow"
+            android:title="Follow" />
         <item
             android:id="@+id/myCircle"
-            android:title="My Circle" />
-
+            android:icon="@drawable/ic_followers"
+            android:title="Followers" />
         <item
             android:id="@+id/joinedCircle"
-            android:title="Joined Circles" />
-
+            android:icon="@drawable/ic_following"
+            android:title="Following" />
         <item
             android:id="@+id/alertCenter"
+            android:icon="@drawable/ic_alert"
             android:title="Alerts Center" />
-
-
-
         <item
             android:id="@+id/inviteFriends"
+            android:icon="@drawable/ic_invite"
             android:title="Invite Friends" />
-
-
         <item
             android:id="@+id/sendHelpAlert"
+            android:icon="@drawable/ic_help_alert"
             android:title="Send Help Alert" />
-
-
         <item
             android:id="@+id/signout"
-            android:title="Signout" />
-
+            android:icon="@drawable/ic_sign_out"
+            android:title="Sign Out" />
     </group>
-
-
-
-
 </menu>
