naming and live location sharing commit

--- a/app/src/main/res/layout/activity_signup_email.xml
+++ b/app/src/main/res/layout/activity_signup_email.xml
@@ -6,8 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    tools:context=".activities.signin_activities.LoginEmailActivity">
+    tools:context=".activities.signup_activities.SignupEmailActivity">
 
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
 
     <EditText
         android:id="@+id/editTextPass"
@@ -30,12 +39,20 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/button_shape"
-        android:onClick="checkEmail"
+        android:onClick="checkIfEmailPresent"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="6dp"
+        android:text="By signing up you accept our Terms of Service and Privacy Policy." />
 
 
 </RelativeLayout>
