--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    tools:context=".activities.signin_activities.LoginPasswordActivity">
+    tools:context=".activities.signin_activities.SigninPasswordActivity">
 
     <EditText
         android:id="@+id/editTextPass"
