--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -10,19 +10,19 @@
 
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/mypinview"
+        android:layout_above="@+id/code_pin_view"
         android:layout_alignParentStart="true"
         android:gravity="center"
-        android:text="Enter your Invite code"
+        android:text="Enter your invitation code"
         android:textSize="16sp"
         android:textStyle="bold" />
 
 
     <com.goodiebag.pinview.Pinview
-        android:id="@+id/mypinview"
+        android:id="@+id/code_pin_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -35,27 +35,27 @@
         app:pinHeight="35dp"/>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/mypinview"
+        android:layout_below="@+id/code_pin_view"
         android:layout_marginTop="18dp"
         android:gravity="center"
-        android:text="Ask your friends for their circle code"
+        android:text="Ask your friends for their code"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/follow_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button_shape"
         android:gravity="center"
-        android:onClick="getCode"
+        android:onClick="get_users_code_with_uid"
         android:text="Submit"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
