--- a/app/src/main/res/layout/activity_following.xml
+++ b/app/src/main/res/layout/activity_following.xml
@@ -18,7 +18,7 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerviewJoined"
+        android:id="@+id/recyclerViewFollowing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
