--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    tools:context="com.mytracker.gpstracker.familytracker.JoinCircleActivity">
-
+    tools:context=".JoinCircleActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -19,7 +18,6 @@
         android:text="Enter your invitation code"
         android:textSize="16sp"
         android:textStyle="bold" />
-
 
     <com.goodiebag.pinview.Pinview
         android:id="@+id/code_pin_view"
@@ -60,9 +58,5 @@
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold" />
-
-
-
-
 
 </RelativeLayout>
