--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -9,7 +9,7 @@
     tools:context=".activities.signin_activities.SigninPasswordActivity">
 
     <EditText
-        android:id="@+id/editTextPass"
+        android:id="@+id/signin_email_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -21,7 +21,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signin_email_next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
