signin_Password_Activity commit

--- a/app/src/main/res/layout/activity_signin_email.xml
+++ b/app/src/main/res/layout/activity_signin_email.xml
@@ -10,7 +10,7 @@
 
 
     <EditText
-        android:id="@+id/signin_email_edittext"
+        android:id="@+id/signin_password_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -23,7 +23,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signin_email_next_button"
+        android:id="@+id/signin_password_next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -31,7 +31,7 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/button_shape"
         android:onClick="email_exists_or_not"
-        android:text="Sign Up Next"
+        android:text="Sign In Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
