--- a/app/src/main/res/layout/activity_signin_password.xml
+++ b/app/src/main/res/layout/activity_signin_password.xml
@@ -9,7 +9,7 @@
     tools:context=".activities.signin_activities.SigninPasswordActivity">
 
     <EditText
-        android:id="@+id/signin_email_edittext"
+        android:id="@+id/signin_password_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -21,7 +21,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/signin_email_next_button"
+        android:id="@+id/signin_password_next_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -29,7 +29,7 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/button_shape"
         android:onClick="Login"
-        android:text="Next"
+        android:text="Sign In Next"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
